// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Table to store customer information.
Item: Table to store items within an order, linking products and orders.
Order: Table to store order details, including notes.
Product: Table to store product details.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    credit_limit DECIMAL 
    balance DECIMAL 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price DECIMAL 
    amount DECIMAL 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    total_amount DECIMAL 
    notes VARCHAR 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    price DECIMAL 
    }



// Relationships
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
